subo ejercicios y entregable del dia 16-5

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>primera practica</h1>
     <h2>usando consola navegador</h2>
-    <script src="js\Entregable11-5.js"></script>
+    <script src="js\Ejercicio Maraton.js"></script>
 </body>
 </html>
